--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,9 @@
+$primary-color: #0e4c87;
+$secondary-color: #f0f0f0;
+$main-color: rgb(59, 59, 59);
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: roboto, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -12,7 +16,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+* {
+  box-sizing: border-box;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -28,11 +34,14 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: white;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+p {
+  font-size: 1em;
+  line-height: 1.5;
+  font-weight: 400;
+  color: $main-color;
 }
 
 button {
