Chips and Title Style Complete

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,7 +3,7 @@ $secondary-color: #f0f0f0;
 $main-color: rgb(59, 59, 59);
 
 :root {
-  font-family: roboto, sans-serif;
+  font-family: roboto, sans-serif; /* Should be Substance Bold */
   line-height: 1.5;
   font-weight: 400;
 
